--- a/index.html
+++ b/index.html
@@ -1349,14 +1349,14 @@ padding-left: 0.35rem;
             <div class="fwrap1">
 
                 <div class="fwrap0">
-                    <h1 style="width: 700px; height: 79px; padding: 0.45rem; font-family: 'georgia'; font-size: 14.85px; color: rgb(77, 29, 10); border-radius: 0.35rem; margin-top: 10px; background: transparent; line-height: 21px; text-align: justify;  border: 0.5px solid rgba(3, 3, 41, 0.923)">Tiki Yiki Cannot guarantee Fish To Disabled Kids Every Time. But Tiki Yiki Can Learn Them How To Fish. Supplying Them More Tools To Get Educated, Empowered And Then Meet Opportunities No Matter Their Disabilities. It Is The Reason To Found Tiki Yiki.</h1>
+                    <h1 style="width: 700px; height: 79px; padding: 0.45rem; font-family: 'georgia'; font-size: 14.85px; color: rgb(77, 29, 10); border-radius: 0.35rem; margin-top: 10px; background: transparent; line-height: 21px; text-align: justify;  border: 0.5px solid rgba(3, 3, 41, 0.923)">Tiki Yiki Cannot guarantee Fish To Disabled Kids Every Time. But Tiki Yiki Can Learn Them How To Fish. Supplying Them More Tools To Get Educated, Empowered And Then Meet Opportunities No Matter Their Disabilities. The Reason To Found Tiki Yiki.</h1>
                 </div>
 
             <a href="#">
               <div class="fwrap">
                 <figure>
                 <img src="https://www.zupimages.net/up/22/31/ttk3.jpg" alt="Teaching in BF">
-                    <figcaption style="font-family: arial; font-size: 15px; color: #000">Children like flowers need to take care of them. I have always had fun while teaching those little angels. </figcaption>
+                    <figcaption style="font-family: arial; font-size: 15px; color: #000">Children as flowers need to take care of them. I have always had fun while teaching those little angels. </figcaption>
                 </figure>
             </div>
             </a>
