--- a/index.html
+++ b/index.html
@@ -1023,11 +1023,11 @@ border-left: 0.5px solid rgba(4, 4, 50, 0.952);
 
 .TXXT1{
 width: 550px;
-height: 335px;
+height: 330px;
 background: rgba(8, 17, 58, 0.97);
 color: rgba(220, 182, 13, 0.92);
 font-family: georgia;
-font-size: 1.7rem;
+font-size: 1.5rem;
 padding-left: 0.35rem;
 }
 
@@ -1349,7 +1349,7 @@ padding-left: 0.35rem;
             <div class="fwrap1">
 
                 <div class="fwrap0">
-                    <h1 style="width: 700px; height: 79px; padding: 0.45rem; font-family: 'georgia'; font-size: 14.85px; color: rgb(77, 29, 10); border-radius: 0.35rem; margin-top: 10px; background: transparent; line-height: 21px; text-align: justify;  border: 0.5px solid rgba(3, 3, 41, 0.923)">Tiki Yiki Cannot guarantee Fish To Disabled Kids Every Time. But Tiki Yiki Can Learn Them How To Fish. Supplying Them More Tools To Get Educated, Empowered And Then Meet Opportunities No Matter Their Disabilities. The Reason To Found Tiki Yiki.</h1>
+                    <h1 style="width: 700px; height: 79px; padding: 0.45rem; font-family: 'georgia'; font-size: 14.85px; color: rgb(77, 29, 10); margin-top: 7px; background: transparent; line-height: 21px; text-align: justify">Tiki Yiki Cannot guarantee Fish To Disabled Kids Every Time. But Tiki Yiki Can Learn Them How To Fish. Supplying Them More Tools To Get Educated, Empowered And Then Meet Opportunities No Matter Their Disabilities. The Reason To Found Tiki Yiki.</h1>
                 </div>
 
             <a href="#">
