--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="education,activities,students">
+    <meta name="description" content="kid-education,activities,students">
     <meta name="keywords" content="education,disablity,inclusion,africa,burkina-faso,west-africa,destiny,self-determination,photography,disabled people,disabled-potographer">
     <meta name="twitter:card" content="summary">
     <meta property="og:site_name" content="Tiki-Yiki">
@@ -28,7 +28,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 <style> 
 
-    *{box-sizing: border-box;
+    *{
+         box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
         margin-top: 0;
         margin-left: 0;
         margin-right: 0;
@@ -222,7 +225,6 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 0.1px solid darkblue;
           }
 
           
@@ -245,13 +247,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 70px;
-    height: 40px;
+    width: 66px;
+    height: 38px;
     border-radius: 50%;
     border-right: 0.12rem solid yellow;
     border-top: 0.12rem solid yellow;
     border-bottom: 0.12rem solid yellow;
-    background: rgba(148, 0, 148, 0.969);
+    background: rgba(151, 5, 151, 0.969);
     color: yellow;
     font-family: 'arial black';
     font-size: 0.83rem;
