--- a/index.html
+++ b/index.html
@@ -2506,7 +2506,7 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
                         <div class="ttle-container">
                         <div class="tt-container">
                         <div class="titlecontainer">
-                             <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6489163/" target="blank"><h2>WHAT IS THE VALUE OF INCLUSIVE EDUCATION ? | LEARN MORE...</h2></a>
+                             <a href="https://www.opensocietyfoundations.org/explainers/value-inclusive-education" target="blank"><h2>WHAT IS THE VALUE OF INCLUSIVE EDUCATION ? | LEARN MORE...</h2></a>
                         </div>
                         
                     </div>
