--- a/index.html
+++ b/index.html
@@ -670,16 +670,16 @@
             font-family: 'arial';
             font-size: 1.5rem;
             line-height: 28px;
-            background: rgba(57, 57, 57, 0.889);
-            color: rgb(14, 148, 251);
+            background: rgba(53, 53, 53, 0.889);
+            color: rgb(13, 158, 255);
             justify-content: center;
             flex-direction: column;
             align-items: space-between;  
             text-align: center; 
-            text-shadow: 0.5px 0.5px rgb(251, 250, 250);
+            text-shadow: 0.5px 0.5px rgb(254, 254, 254);
         }
         h1{
-            color: rgba(100, 100, 100, 0.903);
+            color: rgba(100, 100, 100, 0.93);
             text-shadow: 0.8px 0.8px#efefeff4;
         }
 
@@ -1986,7 +1986,7 @@ margin-top: 2.5rem;
     height: 77px;
     align-items: center;
     justify-content: space-between;
-    margin-top: -75px;
+    margin-top: -73px;
 }
 .cover{
     display: flex;
@@ -2519,7 +2519,7 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
             <div class="footer">
                 <br> 
                 Copyright © 2023 Tiki Yiki Foundation
-                <hr style="width: 10%; align-self: left; color: #fff">
+                <hr style="width: 10%; align-self: left">
                 Webmaster : <p>[ GCK ]<sup style="color: rgba(255, 201, 121, 0.985); font-family: verdana; font-size: 12px">
                 Disability Rights Advocate | Photography Passionate
                 </sup>
