--- a/index.html
+++ b/index.html
@@ -1807,6 +1807,7 @@ margin-top: 2.5rem;
             color: #fff;
             font-size: 12px;
             word-spacing: 1px;
+            border: 0.13rem solid #e1e1e1;
 }
     
 
@@ -1877,6 +1878,7 @@ margin-top: 2.5rem;
     justify-content: center ;
     border-radius: 48px; 
     margin-top: -0.1px!important;
+    border: 0.13rem solid #e1e1e1;
 }
 
 .titlcontainer{
