--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
     .footer{
             display: flex;
             width: 100%;
-            height: 145px;
+            height: 140px;
             position: relative;
             font-family: 'arial';
             font-size: 1.5rem;
@@ -765,13 +765,13 @@
         column-gap: 1.25rem;
         justify-items: center;
         justify-content: space-around;
-        width: 98%;
+        width: 99.9%;
         height: auto;
         background:rgba(253, 205, 132, 0.985);
         margin-top: 6.25rem;
-        border-top: 0.5px solid rgb(230, 186, 120);
-        border-left: 0.5px solid rgba(226, 183, 118, 0.985);
-        border-right: 0.5px solid rgba(226, 183, 118, 0.985);
+        border-top: 0.1px solid rgb(230, 186, 120);
+        border-left: 0.1px solid rgba(226, 183, 118, 0.985);
+        border-right: 0.1px solid rgba(226, 183, 118, 0.985);
     }
 
     .fwrap1{
@@ -1019,7 +1019,7 @@
         display: grid;
         grid-template-rows: 50px 500px;
         row-gap: 0.75rem;
-        width: 98%; 
+        width: 99.9%;
         height: auto;
         background: -webkit-linear-gradient(rgb(25, 60, 177), #e5e5e5);
         background: -moz-linear-gradient(rgb(25, 60, 177), #e5e5e5);
@@ -1194,7 +1194,7 @@
         justify-content: center;
         justify-items: center;
         background:rgba(253, 205, 132, 0.985);
-        width: 98%; 
+        width: 99.9%;
         height: 540px;
     }
 
@@ -1223,7 +1223,7 @@
 .fwrapo1{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    column-gap: 3rem;
+    column-gap: 2.75rem;
     justify-content: center;
     justify-items: center;
     margin-bottom: 2rem;
@@ -1304,12 +1304,12 @@
 .fwrapp4{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    column-gap: 1.45rem;
+    column-gap: 1.25rem;
     justify-content: space-between;
     justify-items: center;
     background: -webkit-linear-gradient(rgb(25, 60, 177), #e5e5e5);
     background: -moz-linear-gradient(rgb(25, 60, 177), #e5e5e5);
-    width: 98%; 
+    width: 99.9%;
 }
 
 .FS{
@@ -1319,9 +1319,8 @@
     justify-content: center;
     justify-items: center;
     padding: 3rem;
-    width: 700px;
+    width: auto;
     height: auto;
-    margin-left: -3px;
     border-right: 0.1rem solid rgba(217, 252, 19, 0.859);
 }
 
@@ -1361,7 +1360,7 @@ padding: 1px;
     justify-items: center;
     background:rgba(253, 205, 132, 0.985); 
     color: #000; 
-    width: 98%; 
+    width: 99.9%;
     height: 610px;
     border-bottom-left-radius: 45%;
     border-bottom-right-radius: 45%;
