--- a/index.html
+++ b/index.html
@@ -1509,6 +1509,7 @@ margin-top: -7px;
 .HealthKare img{
     width: 90px;
     height: 80px;
+    margin-left: -1.85rem;
    }
 .Health{
     width: auto;
@@ -2406,7 +2407,7 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
                     
                     <div class="HealthKare">
 
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3vWl37Fm3qb7GrEwYt8fHYGPvol1Ks4_ypiYRnWOFcbvSzoaEbJZVzqmX14k3Sf--nuM&usqp=CAU" alt="doctor logo" />
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3vWl37Fm3qb7GrEwYt8fHYGPvol1Ks4_ypiYRnWOFcbvSzoaEbJZVzqmX14k3Sf--nuM&usqp=CAU" alt="Doctor logo" />
                     </div>
 
                         <div class="Health">
