--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         border: 0.13rem solid rgba(66, 183, 255, 0.959);
         border-radius: 0.5rem;
         margin-top: -0.75rem;
-        font-size: 1.75rem;
+        font-size: 1.73rem;
         color: rgb(247, 247, 247);
         text-shadow: 0.5px 0.5px rgba(66, 183, 255, 0.959);
         line-height: 38px;
@@ -2094,9 +2094,9 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
 
 
     <div class="Framer">
-            <b  style="font-size: 3rem; color: rgb(209, 209, 209)">Welcome Here ! </b>
+            <b  style="font-size: 2.8rem; color: rgb(247, 247, 247)">Welcome Here ! </b>
         
-            This website is in project and is dedicated to improve education and promote inclusion for disabled children. Some photos are temporary embeded and will be replaced. Come Back Soon. Thank You ! 
+            This website is in project. It will be improving education and promoting inclusion for disabled children in Burkina Faso. Some of the photos are temporary embeded and will be replaced. Come Back Soon. Thank You ! 
     </div>
 </div>
     </a>
