--- a/index.html
+++ b/index.html
@@ -2527,7 +2527,7 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
                 Webmaster : <p>[ GCK ]<sup style="color: rgba(255, 201, 121, 0.985); font-family: verdana; font-size: 12px">
                 Disability Rights Advocate | Photography Passionate
                 </sup>
-                Disability is not Destiny
+                [ Disability is not Destiny ]
                 </div>
     
     </body>
