--- a/index.html
+++ b/index.html
@@ -1053,6 +1053,9 @@
         width: 390px;
         height: 350px;
         margin-top: 0.5rem;
+        font-family: georgia;
+        font-size: 16px;
+        text-shadow: 0.49px 0.49px #fff;
     }
     .diiv1 img{
         width: 370px;
@@ -1075,6 +1078,9 @@
         width: 370px;
         height: 350px;
         margin-top: 0.5rem;
+        font-family: georgia;
+        font-size: 16px;
+        text-shadow: 0.49px 0.49px #fff;
     }
 
     .diiv2 img{
@@ -1098,6 +1104,9 @@
         width: 370px;
         height: 350px;
         margin-top: 0.5rem;
+        font-family: georgia;
+        font-size: 16px;
+        text-shadow: 0.49px 0.49px #fff;
     }
     .diiv3 img{
         width: 370px;
@@ -2163,7 +2172,7 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
             </i>
             </button>
             <div class="FoodSecu-content">
-                <a href="#" target="blank">The Context</a>
+                <a href="https://www.wfp.org/countries/burkina-faso#:~:text=In%202019%2C%20Burkina%20Faso%20was,a%20sharp%20spike%20in%20numbers" target="blank">The Context</a>
                 <a href="#" target="blank">Does Who Need Food ?</a>
                 <a href="#" target="blank">How to Reach Food Safety ?</a>
                 </div>
@@ -2289,7 +2298,7 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
                 <div class="diiv1">
                 <figure>
                     <img src="https://zupimages.net/up/22/21/di3p.jpg" style="width: 370px; height: 350px;" alt="Drumming">
-                    <figcaption style="font-family: georgia; color: rgba(64, 64, 64, 0.96); margin-left: 3px">Drumming Is Part Of Tiki Yiki's Activities</figcaption>
+                    <figcaption style="font-family: georgia; color: rgba(84, 58, 5, 0.938); margin-left: 3px">Drumming Is Part Of Tiki Yiki's Activities</figcaption>
                 </figure>
                 </div>
             </a>
@@ -2298,7 +2307,7 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
                 <div class="diiv2">
                 <figure>
                     <img src="https://zupimages.net/up/22/34/c7h6.jpg" style="width: 370px; height: 350px" alt="Life Scene In Ouagadougou">
-                    <figcaption style="font-family: georgia; color: rgba(64, 64, 64, 0.96); margin-left: 3px">Avenue d'Oubritenga [Ouagadougou - BFA]</figcaption>
+                    <figcaption style="font-family: georgia; color: rgba(84, 58, 5, 0.938); margin-left: 3px">Avenue d'Oubritenga [Ouagadougou - BFA]</figcaption>
                 </figure>
                 </div>
             </a>
@@ -2307,7 +2316,7 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
                 <div class="diiv3">
                     <figure>
                     <img src="https://zupimages.net/up/22/27/zf4p.jpg" style="width: 370px; height: 350px" alt="Red Flower">
-                    <figcaption style="font-family: georgia; color: rgba(64, 64, 64, 0.96); margin-left: 3px">A Flower Symbolizing Volunteers And Donors</figcaption>
+                    <figcaption style="font-family: georgia; color: rgba(84, 58, 5, 0.938); margin-left: 3px">A Flower Symbolizing Volunteers And Donors</figcaption>
                 </figure>
                 </div>
             </a>
@@ -2500,7 +2509,7 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
                         <div class="ttl-container">
                         <div class="t-container">
                         <div class="titlcontainer">
-                           <a href="https://www.wfp.org/countries/burkina-faso#:~:text=In%202019%2C%20Burkina%20Faso%20was,a%20sharp%20spike%20in%20numbers." target="blank"><h4>Food</h4></a>
+                           <a href="https://www.wfp.org/countries/burkina-faso#:~:text=In%202019%2C%20Burkina%20Faso%20was,a%20sharp%20spike%20in%20numbers" target="blank"><h4>Food Saf</h4></a>
                         </div>
                 
                     </div>
