--- a/index.html
+++ b/index.html
@@ -251,14 +251,14 @@
     width: 70px;
     height: 40px;
     border-radius: 50%;
-    border-right: 0.12rem solid yellow;
-    border-top: 0.12rem solid yellow;
-    border-bottom: 0.12rem solid yellow;
-    background: rgba(227, 25, 18, 0.964);
     color: yellow;
     font-family: 'arial black';
     font-size: 0.68rem;
     padding: 2px;
+    border-right: 0.12rem solid yellow;
+    border-top: 0.12rem solid yellow;
+    border-bottom: 0.12rem solid yellow;
+    background: rgba(227, 25, 18, 0.964);
     margin-top: 16px;
             }
     
@@ -1628,11 +1628,14 @@ margin-top: -5px;
     width: 90px;
     height: 45px;
     border-radius: 50%;
-    border-right: 0.13rem solid yellow;
-    background: rgba(227, 25, 18, 0.964);
     color: yellow;
     font-family: 'arial black';
-    font-size: 0.94rem;
+    font-size: 0.75rem;
+    padding: 2px;
+    border-right: 0.12rem solid yellow;
+    border-top: 0.12rem solid yellow;
+    border-bottom: 0.12rem solid yellow;
+    background: rgba(227, 25, 18, 0.964);
     padding: 10px;
     margin-top: 0.5rem;
 }
@@ -2241,7 +2244,7 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
                     </div>
                     </div>
 
-                    <div class="TYKMeaning" style="font-weight: bold">Etymology Of Tiki N'Yiki</div>
+                    <div class="TYKMeaning">Etymology Of Tiki N'Yiki</div>
                 </div>
                 </a>
 
@@ -2250,7 +2253,7 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
                     <div class="Ti">
                         <img src="https://cdn-icons-png.flaticon.com/512/2891/2891323.png" alt="TikiYiki">
                     </div>
-                    <div class="TYKmess" style="font-weight: bold">Why Tiki N'Yiki ?</div>
+                    <div class="TYKmess">Why Tiki N'Yiki ?</div>
                 </div>
             </a>
 
@@ -2258,7 +2261,7 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
                 <div class="Wrapp2">
                     <div class="Activity"><img src="https://cdn-icons-png.flaticon.com/512/11/11296.png" alt="acitivities-icon">
                     </div>
-                    <div class="Activmess" style="font-weight: bold">Activities And Projects</div>
+                    <div class="Activmess">Activities And Projects</div>
                 </div>
             </a>
 
@@ -2266,7 +2269,7 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
                 <div class="Wrapp3">
                     <div class="Emailing"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVnEXnBoadjrjEE9C5TSuLyHC4FjeEIlGHVLkDpVfQ_gus4zDOa2XjeKjEADxGgjgrycw&usqp=CAU" alt="email-logo">
                     </div>
-                    <div class="Emessage" style="font-weight: bold">Mailing</div>
+                    <div class="Emessage">Mailing</div>
                 </div>
             </a>
                  
