--- a/index.html
+++ b/index.html
@@ -1813,7 +1813,7 @@ margin-top: 2.5rem;
             color: #fff;
             font-size: 12px;
             word-spacing: 1px;
-            border: 0.13rem solid #e1e1e1;
+            border: 0.13rem solid #bebebe;
 }
     
 
@@ -1884,7 +1884,7 @@ margin-top: 2.5rem;
     justify-content: center ;
     border-radius: 48px; 
     margin-top: -0.1px!important;
-    border: 0.13rem solid #e1e1e1;
+    border: 0.13rem solid #bebebe;
 }
 
 .titlcontainer{
@@ -1941,7 +1941,7 @@ margin-top: 2.5rem;
     color: yellow;
     border-top: 4px solid #ff0;
     border-radius: 13px;
-    width:65% ;
+    width:64.5% ;
     height: 30px;
     margin-top: -5px;
     margin-left: -4.5px;
@@ -1970,7 +1970,7 @@ margin-top: 2.5rem;
     border-radius: 13px;
     margin-left: -4.5px;
     margin-top: -5px;
-    width:65%;
+    width:64.5%;
     height: 30px;
     justify-content: start;
     align-items: center;
@@ -2504,7 +2504,7 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
                         <div class="ttl-container">
                         <div class="t-container">
                         <div class="titlcontainer">
-                           <a href="https://www.wfp.org/countries/burkina-faso#:~:text=In%202019%2C%20Burkina%20Faso%20was,a%20sharp%20spike%20in%20numbers" target="blank"><h5>Food SeCu</h5></a>
+                           <a href="https://www.wfp.org/countries/burkina-faso#:~:text=In%202019%2C%20Burkina%20Faso%20was,a%20sharp%20spike%20in%20numbers" target="blank"><b style="font-size: 12px;">Food Safety</b></a>
                         </div>
                 
                     </div>
