--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
         justify-content: center;
         width: 100%;
         height: auto;
-        background: transparent;
+        background: #fff;
     }
     
     ::-webkit-scrollbar{
