--- a/index.html
+++ b/index.html
@@ -1512,10 +1512,20 @@ margin-top: -7px;
     height: 80px;
     margin-left: -1.85rem;
    }
+
+   .HealthKare img:hover{
+    transform: rotate(360deg);
+    transition: 0.75s ease;
+   }
+
 .Health{
     width: auto;
-    text-shadow: 0.6px 0.6px gold;
+    text-shadow: 0.59px 0.59px rgba(255, 217, 0, 0.974);
    
+}
+.Health:hover{
+    
+   transform: scale(1.01);
 }
 
 .TXX{
