--- a/index.html
+++ b/index.html
@@ -1824,6 +1824,7 @@ margin-top: 2.5rem;
             font-size: 12px;
             word-spacing: 1px;
             border: 0.13rem solid #bebebe;
+            margin-top: -0.15px!important;
 }
     
 
@@ -1893,7 +1894,7 @@ margin-top: 2.5rem;
     align-items: center;
     justify-content: center ;
     border-radius: 48px; 
-    margin-top: -0.1px!important;
+    margin-top: -0.15px!important;
     border: 0.13rem solid #bebebe;
 }
 
@@ -2004,13 +2005,13 @@ margin-top: 2.5rem;
     height: 77px;
     align-items: center;
     justify-content: space-between;
-    margin-top: -71px;
+    margin-top: -71.5px;
 }
 .cover{
     display: flex;
     position: relative;
     width: 20%;
-    height: 66px;
+    height: 67px;
     background: rgba(161, 161, 161, 0.541);
     justify-content: center;
     align-items: center;
@@ -2022,7 +2023,7 @@ margin-top: 2.5rem;
     display: flex;
     position: relative;
     width: 80%;
-    height: 66px;
+    height: 67px;
     background: rgba(161, 161, 161, 0.541);
     justify-content: center;
     align-items: center;
@@ -2421,7 +2422,7 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
                     
                     <div class="HealthKare">
 
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3vWl37Fm3qb7GrEwYt8fHYGPvol1Ks4_ypiYRnWOFcbvSzoaEbJZVzqmX14k3Sf--nuM&usqp=CAU" alt="Doctor logo" />
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3vWl37Fm3qb7GrEwYt8fHYGPvol1Ks4_ypiYRnWOFcbvSzoaEbJZVzqmX14k3Sf--nuM&usqp=CAU" alt="Medical Logo" />
                     </div>
 
                         <div class="Health">
