--- a/index.html
+++ b/index.html
@@ -765,7 +765,6 @@ border-radius: 5rem;
 font-size: 1.05rem;
 color:rgba(1, 132, 197, 0.955);
 margin-top: -0.45rem;
-background: #f1f1f1;
           }
 
           .BA:hover{
@@ -1271,7 +1270,7 @@ font-size: 14px;
 .HPh{
   display: grid;
   grid-template-columns: 0.85fr 1fr;
-  column-gap: 0.1rem;
+  column-gap: 0.2rem;
   justify-content: space-between;
   justify-items: center;
   width: 102.15%;
@@ -1284,14 +1283,18 @@ font-size: 14px;
             cursor: pointer;
 }
 
+.VerTiWA{
+  height: 150px;
+  line-height: 35px;
+}
 .VerTiWa{
   display: grid;
   grid-template-rows: 1fr;
   padding: 25px;
   justify-content: center;
   justify-items: center;
-  width: 100%;
-  height: 66px;
+  width: 90%;
+  height: 60px;
   color: #2a2a2a;
   font-size: 22px;
 line-height: 14.25px;
@@ -1421,8 +1424,8 @@ font-size: 20px;
             justify-content: space-around;
             justify-items: center;
             padding: 10px;
-            width: 86.5%;
-            height: 468px;
+            width: 86.7%;
+            height: 460px;
             background: #fffffff1;
             border: 0.15rem solid #949494eb;
             border-radius: 0.5rem;
@@ -1452,7 +1455,7 @@ font-size: 20px;
       padding: 10px;
       font-family: georgia;
       font-size: 1.2rem;
-      line-height: 26px;
+      line-height: 24px;
       cursor: pointer;
       box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
     }
@@ -2450,7 +2453,6 @@ font-size: 14px;
                     <div class="Vertical-Writing">
                       <div class="VerTiWA">
                       <h1> What Is The Power of Flower?</h1>
-                      </br>
                         Since Antiquity people explored ways to use plants especially flowers to heal, feel happy, strenghten their mental states. This certainly has lead to the invention of nowadays medecinal drugs
                     </div>
                     <div class="VerTiWa">
