--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
             line-height: 35px;
             font-family: 'Poppins';
             font-size: 1.5rem;
-            color: #8a8a8a;
+            color: #808080;
             border: 0.15rem solid #949494eb;
             border-radius: 0.5rem;
             background: #fffffff1;
@@ -729,7 +729,7 @@ background: #fffffff1;
 border-radius: 1rem;
 font-family: 'Poppins';
 font-size: 16px;
-color: #848484;
+color: #6b6b6b;
 cursor: pointer;
 margin-top: 0.35rem;
 box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
@@ -787,7 +787,7 @@ background: #fffffff1;
 border-radius: 1rem;
 font-family: 'Poppins';
 font-size: 16px;
-color: #848484;
+color: #6b6b6b;
 cursor: pointer;
 margin-top: 0.35rem;
 box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
@@ -816,7 +816,7 @@ background: #fffffff1;
 border-radius: 1rem;
 font-family: 'Poppins';
 font-size: 16px;
-color: #848484;
+color: #6b6b6b;
 cursor: pointer;
 margin-top: 0.35rem;
 box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
@@ -838,7 +838,7 @@ box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
       width: 84.05%;
       height: 100px;
       border: 0.15rem solid #949494eb;
-      color: #adadad;
+      color: #8c8c8c;
       font-family: 'Poppins';
       font-size: 2rem;
       padding: 1.5rem;
@@ -866,7 +866,7 @@ box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
       width: 84.05%;
       height: 100px;
       border: 0.15rem solid #949494eb;
-      color: #adadad;
+      color: #8c8c8c;
       font-family: 'Poppins';
       font-size: 2rem;
       padding: 1.5rem;
@@ -1133,13 +1133,13 @@ cursor: pointer;
   padding: 10px;
   width: 100%;
   height: 300px;
-  color: rgba(143, 143, 143, 0.987);
+  color: rgba(149, 148, 148, 0.987);
   border-radius: 0.5rem;
 }
 
 .DiV2:hover{
   border: 0.15rem solid rgba(0, 187, 255, 0.889);
-  color: #000;
+  color: #606060f7;
   transition: 0.25s ease-in;
   border-radius: 0.8rem;
   padding: 5px;
@@ -1153,7 +1153,7 @@ cursor: pointer;
       width: 84.05%;
       height: 100px;
       border: 0.15rem solid #949494eb;
-      color: #adadad;
+      color: #8c8c8c;
       font-family: 'Poppins';
       font-size: 2rem;
       padding: 1.5rem;
@@ -1295,7 +1295,7 @@ font-size: 14px;
   justify-items: center;
   width: 90%;
   height: 60px;
-  color: #2a2a2a;
+  color: #797979;
   font-size: 22px;
 line-height: 14.25px;
 background: #f1f1f1;
@@ -1362,7 +1362,7 @@ font-size: 20px;
 
 .HPT{
   background: transparent;
-  color:#747474fa;
+  color:#6c6c6cfa;
   font-family: 'Poppins';
   font-size: 17.23px;
   width: auto;
@@ -1374,7 +1374,7 @@ font-size: 20px;
 }
 
 .HPT:hover{
-  color: #333333f7;
+  color:rgba(45, 45, 45, 0.969);
 }
 
 .navbar5{
@@ -1385,7 +1385,7 @@ font-size: 20px;
       width: 84.04%;
       height: 100px;
       border: 0.15rem solid #949494eb;
-      color: #adadad;
+      color: #8e8e8e;
       font-family: 'Poppins';
       font-size: 2rem;
       padding: 1.5rem;
@@ -1399,7 +1399,7 @@ font-size: 20px;
 
           .navbar5:hover{
             background: #fff;
-            color: #858585;
+            color: #616161;
             border-radius: 0.7rem;
             transition: 0.17s ease-in;
             border: 0.15rem solid #000;
@@ -1494,7 +1494,7 @@ font-size: 14px;
     
     }
     ::-webkit-scrollbar-track-piece{
-        background: #dddddd;
+        background: #cecece;
         cursor: pointer;
   
     }
