--- a/index.html
+++ b/index.html
@@ -1393,6 +1393,7 @@ font-size: 20px;
       background: #fffffff1;
       box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
       cursor: pointer;
+      margin-top: 0.25rem;
     
           }
 
