--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
       align-items: center;
       width: 100%;
       height: 45px;
-      background: #f1f1f1e9;
+      background: #fcfcfce9;
       color: darkblue;
       font-family: 'Poppins';
       font-size: 1.35rem;
@@ -454,7 +454,7 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background: #f1f1f1;
+        background: #eaeaea;
     }
 
     .content1{
@@ -1494,7 +1494,7 @@ font-size: 14px;
     
     }
     ::-webkit-scrollbar-track-piece{
-        background: #cecece;
+        background: #f5f5f5;
         cursor: pointer;
   
     }
