--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background: #eaeaea;
+        background: #e4e4e4fc;
     }
 
     .content1{
