--- a/index.html
+++ b/index.html
@@ -473,11 +473,11 @@
           .STAMP{
             display: grid;
             grid-template-columns: 1fr 1fr;
-            column-gap: 0.1rem;
+            column-gap: 0.15rem;
             justify-content: center;
             justify-items: center;
             background: transparent;
-            width: 86.13%;
+            width: 86.25%;
             height: auto;
             padding: 5px;
             background: transparent;
@@ -637,7 +637,7 @@
             grid-template-columns: 0.5fr 1.5fr;
             justify-content: space-between;
             justify-items: center;
-            width: 86.11%;
+            width: 86%;
             height: 185px;
             padding: 2rem;
             margin-top: 1rem;
@@ -695,7 +695,7 @@
             justify-content: space-around;
             justify-items: center;
             padding: 0.3rem;
-            width: 85.9%;
+            width: 85.82%;
             height: 270px;
             background: #f1f1f1;
             margin-top: 0.7rem;
@@ -709,7 +709,7 @@
           .Kontent:hover{
             border: 0.45rem solid #fff;
             transition: 0.4s ease;
-            background: #f1f1f1;
+            background: #e4e4e4fc;
             border-bottom-left-radius: none;
             border-top-right-radius: none;
             border: 1rem;
@@ -2453,7 +2453,7 @@ font-size: 14px;
                     <div class="Vertical-Writing">
                       <div class="VerTiWA">
                       <h1> What Is The Power of Flower?</h1>
-                        Since Antiquity people explored ways to use plants especially flowers to heal, feel happy, strenghten their mental states. This certainly has lead to the invention of nowadays medecinal drugs
+                      Since Antiquity people have explored many ways to use plants especially flowers to heal, getting a well-being, strenghten their mental states. And may be that has led to the invention of nowadays medecinal drugs
                     </div>
                     <div class="VerTiWa">
                       Learn More...
