--- a/index.html
+++ b/index.html
@@ -2224,11 +2224,11 @@ font-size: 14px;
             <div class="T-Area">
 
                <div class="PH">
-                <img src="https://zupimages.net/up/22/21/di3p.jpg" alt="Drumming Time - BFA">
+                <img src="https://www.zupimages.net/up/22/21/di3p.jpg" alt="Drumming - BFA">
             </div>
 
             <div class="Drum">
-              In addition to teaching, activities of Tiki N'Yiki include volunteering and sensibilisations about disability. As Culture Can Be A Base Of Our Identity there are some couple activities like drumming as well as theater.
+              In addition to teaching activities there are also volunteering and sensibilisations about disability. As Culture Can Be A Base Of Our Identity there are some couple activities like drumming as well as theater.
            </div>
            
          <a href="#">
@@ -2372,12 +2372,12 @@ font-size: 14px;
               <div class="DiapoPhoto">
                 <div class="T">
                 <div style="background:#4a4a4af7; color: #fff; padding: 6px; font-family: 'Poppins'; font-size: 18px">Celebrating Christmas with Children at Tiki N'Yiki's headquarter [Burkina Faso]</div>
-                <div><img src="https://zupimages.net/up/22/31/z42x.jpg" alt="Christmas at Tiki N'Yiki"></div>
+                <div><img src="https://www.zupimages.net/up/22/31/z42x.jpg" alt="Christmas at Tiki N'Yiki"></div>
               </div>
 
               <div class="T1">
                 <div style="background: #4a4a4af7; color: #fff; padding: 6px; font-family: 'Poppins'; font-size: 18px">Classes in Ziniare [Burkina Faso]</div>
-                <div><img src="https://zupimages.net/up/22/21/3bad.jpg" alt="Classes"> </div>
+                <div><img src="https://www.zupimages.net/up/22/21/3bad.jpg" alt="Classes"> </div>
               </div>
 
               <div class="T2">
@@ -2442,7 +2442,7 @@ font-size: 14px;
 
                     <div class="HPT">
                       We are all human-beings but we don't have the same status. We can have the same sickness [illness] but we don't have the same care. 
-                      Nowadays Healthcare Affair is a Money Affair. 
+                      Nowadays Healthcare is a Money Affair. 
                       But how do the people without any income or with low income including 
                       disabled people will access to health care? Many may have to wait or die.</div>
                   
