--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
             padding: 0.3rem;
             width: 85.82%;
             height: 270px;
-            background: #f1f1f1;
+            background: #e4e4e4fc;
             margin-top: 0.7rem;
             border-top: 0.13rem groove blue;
             border-left: 0.13rem groove blue;
