--- a/index.html
+++ b/index.html
@@ -2405,7 +2405,7 @@ font-size: 14px;
                        </div>
               <a href="https://www.education.gov.bf/accueil" target="_blank">
                 <div class="DiV2">
-                <b style="font-size: 23.9px; font-family: 'georgia'; line-height: 28.4px">The More The Rate of Education Get Higher, The More Poverty Will Be Lower And the Index of Development Get Ascendant. That Highlights How Education Is Important and It Stands as a Foundation for Nations to Build Up a Sustainable Development.</b>
+                <b style="font-size: 23.9px; font-family: 'georgia'; line-height: 28.4px">The More The Rate of Education Get Higher, The More The Rate of Poverty Will Be Lower And The More the Index of Development Will Be Ascendant. That Highlights How Education Is Important and Stands as a Foundation for Nations to Implement a Sustainable Development.</b>
                 </div>
               </a>
               </div>
