--- a/index.html
+++ b/index.html
@@ -1284,7 +1284,8 @@ font-size: 14px;
 
 .VerTiWA{
   height: 150px;
-  line-height: 35px;
+  line-height: 30px;
+  font-size: 1.85rem;
 }
 .VerTiWa{
   display: grid;
@@ -1323,11 +1324,10 @@ font-size: 20px;
   justify-items: space-between;
   justify-items: center;
   font-family: 'Poppins'; 
-  font-size: 2rem;
   line-height: 40px;
   margin-top: 4rem;
   color: #979797;
-  width: 300spx;
+  width: 300px;
   background: transparent;
 }
 .Vertical-Writing:hover{
@@ -1454,14 +1454,20 @@ font-size: 20px;
       color: #787878fa;
       padding: 10px;
       font-family: georgia;
-      font-size: 1.2rem;
-      line-height: 24px;
+      font-size: 1.15rem;
+      line-height: 22px;
       cursor: pointer;
       box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
     }
 
 .FSTS:hover{
   color:#000;
+}
+
+.FooD{
+  font-family: georgia;
+  font-size: 20px;
+line-height: 24px;
 }
 
 .SF{
@@ -2486,7 +2492,7 @@ font-size: 14px;
 
                 <div class="FSTS">
 
-                  <div>
+                  <div class="FooD">
                   While in some regions around the world people have no more to worry about Food Safety, in some other ones, it is not the same reality. There are ceaseless worries in terms of having daily bread [Food]. Some people have to struggle hard to get it. In worse cases, some have died or are dying. But No Food Safety, No Sustainable Development. 
                 </div>
 
