--- a/index.html
+++ b/index.html
@@ -2234,7 +2234,7 @@ font-size: 14px;
             </div>
 
             <div class="Drum">
-              In addition to teaching activities there are also volunteering and sensibilisations about disability. As Culture Can Be A Base Of Our Identity there are some couple activities like drumming as well as theater.
+              In addition to teaching activities there are also volunteering, sensibilisations about disability and vulnerability as well as drumming.
            </div>
            
          <a href="#">
