--- a/index.html
+++ b/index.html
@@ -1758,20 +1758,19 @@ font-size: 14px;
    }
 
    .SPan{
-    background-color: #fff;
+    background: #fff;
     display: flex; 
     width: 100%;
-    height: 30px;
+    height: 35px;
     justify-content: center; 
     align-items: center; 
     padding: 0.5rem;
     color: rgba(16, 16, 175, 0.928);
-    border-radius: 0.3rem;
 }
 
 .SPan:hover{
-    background:#fff;
-    color: #000;
+    background:#000;
+    color: #ff0;
     border-top: 2px solid #f1f1f1;
 }
 
