--- a/index.html
+++ b/index.html
@@ -2306,13 +2306,13 @@ font-size: 14px;
                 <div class="AB">
                 <b style="font-size: 19px; color: rgba(1, 150, 224, 0.963)">Etymology and Meaning</b>
                 <br>
-                Tiki N'Yiki is etymologically structured by two (2) words of Moore a language in Burkina Faso :
+                Tiki N'Yiki is etymologically structured of two (2) words of Moore, a language in Burkina Faso :
                 <br>
                 <br>
-              <b>1. Tiki</b> that is litteraly meaning LEANING UPON
+              <b>1. Tiki</b> is litteraly meaning <b>LEANING UPON</b>
                 <br>
                 <br>
-              <b> 2. N'Yiki</b> that means GETTING UP
+              <b> 2. N'Yiki</b> is meaning <b>GETTING UP</b>
               </div>
 
               <a href="#">
