--- a/index.html
+++ b/index.html
@@ -2449,7 +2449,7 @@ font-size: 14px;
                       We are all human-beings but we don't have the same status. We can have the same sickness [illness] but we don't have the same care. 
                       Nowadays Healthcare is a Money Affair. 
                       But how do the people without any income or with low income including 
-                      disabled people will access to health care? Many may have to wait or die.</div>
+                      disabled people will access to health care? Many have to wait in the suffering or die.</div>
                   
                   </div>
 
