--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       color: #000;
       transition: 0.3s ease-in;
       border-radius: 3rem;
-      background: #fff;
+      background: greenyellow;
           }
 
           
@@ -202,9 +202,9 @@
           .myDiv1:hover{
       border: 0.2rem solid #fa124c;
       color: #000;
-      transition: 0.33s ease-in;
+      transition: 0.3s ease-in;
       border-radius: 3rem;
-      background: #fff;
+      background: greenyellow;
           }
 
           .myDiv2{
@@ -225,11 +225,11 @@
           }
 
           .myDiv2:hover{
-      border: 0.2rem solid #fb275c;
+      border: 0.2rem solid #fa124c;
       color: #000;
       transition: 0.3s ease-in;
       border-radius: 3rem;
-      background: #fff;
+      background: greenyellow;
           }
 
           .myDiv3{
@@ -254,7 +254,7 @@
       color: #000;
       transition: 0.3s ease-in;
       border-radius: 3rem;
-      background: #fff;
+      background: greenyellow;
           }
 
           .myDiv4{
@@ -279,7 +279,7 @@
       color: #000;
       transition: 0.3s ease-in;
       border-radius: 3rem;
-      background: #fff;
+      background: greenyellow;
           }
 
           .myDiv5{
@@ -304,7 +304,7 @@
       color: #000;
       transition: 0.3s ease-in;
       border-radius: 3rem;
-      background: #fff;
+      background: greenyellow;
           }
 
           .myDiv4{
@@ -329,7 +329,7 @@
       color: #000;
       transition: 0.3s ease-in;
       border-radius: 3rem;
-      background: #fff;
+      background: greenyellow;
           }
 
           .myDiv6{
@@ -354,7 +354,7 @@
       color: #000;
       transition: 0.3s ease-in;
       border-radius: 3rem;
-      background: #fff;
+      background: greenyellow;
           }
 
           .Unyfy{
