--- a/index.html
+++ b/index.html
@@ -144,12 +144,13 @@
                  justify-items: center;
                  background: rgba(9, 109, 240, 0.668);
                  width: 100%;
-                 height: 72.77px;
+                 height: 72px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 0.45rem solid rgba(1, 82, 168, 0.673);
+                 border-top: 0.12rem solid #2b2a2ac7;
+                 border-bottom: 0.4rem solid rgba(8, 106, 235, 0.69);
           }
           
           .myDiv{
@@ -380,7 +381,7 @@
       align-items: center;
       width: 100%;
       height: 45px;
-      background: #fffffff0;
+      background: #fff;  
       color: darkblue;
       font-family: 'Poppins';
       font-size: 1.35rem;
@@ -1738,17 +1739,17 @@ font-size: 14px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 77px;
-    height: 67px;
+    width: 70px;
+    height: 65px;
     border-radius: 50%;
     color: yellow;
     font-family: 'helvetica';
-    font-size: 0.79rem;
+    font-size: 0.78rem;
     padding: 2px;
-    border: 0.2rem solid rgba(9, 109, 240, 0.668);
+    border: 0.2rem solid rgba(8, 106, 235, 0.69);
     background: rgb(255, 1, 1);
-    margin-top: -12px;
-    margin-left: 1.25rem;
+    margin-top: -16px;
+    margin-left: 1.1rem;
     cursor: pointer;
    }
 
