--- a/index.html
+++ b/index.html
@@ -513,6 +513,10 @@
             border-radius: 0.5rem;
             margin-top: 2.25rem;
           }
+          .CIP img{
+            width: 101%;
+            height: 470px;
+          }
             
           .PH img:hover {
             transform: scale(1.01);
@@ -573,9 +577,9 @@
             margin-right: 4rem;
             width: 100%;
             height: 787px;
-            line-height: 24px;
+            line-height: 16px;
             font-family: 'georgia';
-            font-size: 20px;
+            font-size: 9px;
             color: #838383;
             background: #fffffff1;
             border: 0.15rem solid #949494eb;
@@ -2248,6 +2252,9 @@ font-size: 14px;
   
             <a href="#">
             <div class="Pic">
+              <div class="CIP">
+                <img src="https://zupimages.net/up/22/46/daw5.jpg" alt="Support Teaching">
+            </div>
             <div class="PiK">
               Sometimes they are considered to be the most courageous and angellustic people with a strong character by the ones and get included. But sometimes they are ridiculed, deviled, physically assaulted [Women with disabilities are more exposed to sexual harrasments]. They are experiencing many kinds of discriminations and then get excluded by the others. It should'nt. The people never lack words and ways to cheer them or drive fear to them. 
               When it comes to include them by helping them have opportunities, that same people has sometimes been absent, indifferent or/and reticent about pushing and promoting inclusion in the communities. But
